//
// Created by cfont on 14.04.2022.
//

#ifndef LABO4_RIVER_ROBBER_HPP
#define LABO4_RIVER_ROBBER_HPP


class Robber {

};


#endif //LABO4_RIVER_ROBBER_HPP
